--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "mysql": "^2.18.1",
+    "mongoose": "^4.12.1",
     "request": "^2.88.0",
     "serve-favicon": "~2.4.2"
   }
